# ClothCutting

./: CMakeLists.txt  README.md
ClothCutting/: main.cpp
ClothCutting/algorithm/: solver.cpp
